[package]
name = "boom"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "boom"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
percentage = "0.1.0"
solana-program = "1.9.24"
solana-security-txt = "1.0.1"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }