[package]
name = "sosol"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sosol"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-program = "1.9.24"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }
percentage = "0.1.0"